@@ -3078,3 +3078,5 @@
 	  LCD found in the Motorola C155 telephone.  The driver is specific to the C155
 	  because it uses the uwire transport.  Contributed by Denis Carilki and
 	  Alan Carvalho de Assis.
+	* drivers/power/pm_changestate.c.  Correct a case where interrupts were not
+	  being re-enabled.  Found by Diego Sanchez.
